--- a/public/index.html
+++ b/public/index.html
@@ -66,12 +66,10 @@
             <!-- SECOND ROW -->
             <div class="row align-items-center mt-md-5">
                 <div class="col-md-8 px-4 px-md-0">
-                    <span class="display-5">
-                        <p class="section-description">
+                    <p class="display-5 section-description">
                             Ce site est fait par des programmeurs pour tous les programmeurs qui 
                             ont un peu de mal à s'adapter à la écriture de commentaires en français
-                        </p>
-                    </span>
+                    </p>
                 </div>
                 <div class="col-md-4 mt-4 mt-md-0 text-end">
                     <div class="icon-box">
@@ -105,11 +103,9 @@
                             <h2>
                                 Rejoignez-nous
                             </h2>
-                            <span class="display-6">
-                                <p class="section-description">
+                            <p class="display-6 section-description">
                                     Dans notre association, nos membres partagent leurs astuces pour mieux coder et avoir un environnement de travail sain. La plupart d'entre eux ont multiplié par 10 leur productivité et cherchent maintenant à aider les autres
-                                </p>
-                            </span>
+                            </p>
                         </div>
                         <div class="row mt-3">
                             <button type="button" class="btn btn-primary btn-lg btn-block">Contacter</button>
