--- a/public/index.html
+++ b/public/index.html
@@ -150,7 +150,7 @@
     </section>
     
     <!-- FOOTER -->
-    <footer class="bg-dark text-center text-white" style="bottom: 0;">
+    <footer class="bg-dark text-center text-white">
         <!-- Copyright -->
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
           © 2023 Copyright:
