Fixed margin bug

--- a/public/calendrier.html
+++ b/public/calendrier.html
@@ -53,7 +53,7 @@
     </nav>
     
     <!-- CALENDAR  -->
-    <section id="calendar" class="section pt-4 pt-md-5">
+    <section id="calendar" class="section section-calendar pt-4 pt-md-5">
         <div class="container-md py-5 mt-5">
             <h1 class="display-2 my-md-5">Nos prochains activités</h1>
             <div class="accordion pt-3 pt-md-5" id="accordionExample">
