--- a/public/calendrier.html
+++ b/public/calendrier.html
@@ -58,9 +58,18 @@
             <h1 class="display-2 my-md-5">Nos prochains activités</h1>
             <div class="accordion pt-3 pt-md-5" id="accordionExample">
                 <div class="accordion-item">
-                    <h2 class="accordion-header" id="headingOne">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                        Accordion Item #3
+                    <h2 class="accordion-header " id="headingOne">
+                        <button class="accordion-button collapsed align-items-baseline" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                            <div class="container-fluid">
+                                <div class="row align-items-baseline">
+                                    <div class="col-md-4">
+                                        <span class="display-5 ps-3">Mercredi 1 février</span>
+                                    </div>
+                                    <div class="col-md-8">
+                                        <span class="description">Mercredi 1 février</span>
+                                    </div>
+                                </div>
+                            </div>
                         </button>
                     </h2>
                     <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne">
@@ -72,7 +81,16 @@
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingTwo">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                            Accordion Item #2
+                            <div class="container-fluid">
+                                <div class="row align-items-baseline">
+                                    <div class="col-md-4">
+                                        <span class="display-5 ps-3">Mercredi 15 février</span>
+                                    </div>
+                                    <div class="col-md-8">
+                                        <span class="description">Mercredi 15 février</span>
+                                    </div>
+                                </div>
+                            </div>
                         </button>
                     </h2>
                     <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo">
@@ -84,10 +102,41 @@
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingThree">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                        Accordion Item #3
+                            <div class="container-fluid">
+                                <div class="row align-items-baseline">
+                                    <div class="col-md-4">
+                                        <span class="display-5 ps-3">Vendredi 17 mars</span>
+                                    </div>
+                                    <div class="col-md-8">
+                                        <span class="description">Vendredi 17 mars</span>
+                                    </div>
+                                </div>
+                            </div>
                         </button>
                     </h2>
                     <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree">
+                        <div class="accordion-body">
+                            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingFour">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                            <div class="container-fluid">
+                                <div class="row align-items-baseline">
+                                    <div class="col-md-4">
+                                        <span class="display-5 ps-3">Jeudi 20 avril</span>
+                                    </div>
+                                    <div class="col-md-8">
+                                        <span class="description">Vendredi 17 mars</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </button>
+                    </h2>
+                    <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour">
                         <div class="accordion-body">
                             <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
                         </div>
