Added second accordion item

--- a/public/calendrier.html
+++ b/public/calendrier.html
@@ -55,7 +55,7 @@
     <!-- CALENDAR  -->
     <section id="calendar" class="section section-calendar pt-4 pt-md-5">
         <div class="container-md py-5 mt-5">
-            <h1 class="display-2 my-md-5">Nos prochains activités</h1>
+            <h1 class="display-1 my-md-5 text-uppercase text-center">Nos prochains activités</h1>
             <div class="accordion pt-3 pt-md-5" id="accordionExample">
                 
                 <!-- FIRST ITEM -->
@@ -76,7 +76,9 @@
                     </h2>
                     <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne">
                         <div class="accordion-body px-5">
-                            <h3 class="mt-2 mb-5">Developpement d'une Intelligence Artificielle</h3>
+                            <h3 class="mt-2 mb-5 display-4 text-center">
+                                Developpement d'une Intelligence Artificielle
+                            </h3>
                             <p>
                                 Dans cette atelier nous allons apprendre comment developper une intelligence artificielle
                             </p>
@@ -104,7 +106,7 @@
                                         <span class="display-5 ps-3">Mercredi 15 février</span>
                                     </div>
                                     <div class="col-md-8 mt-2 text-center">
-                                        <span>Attelier Developpement d'une Intelligence Artificielle</span>
+                                        <span>Atelier comment entraîner une intelligence artificielle à la reconnaissance de photos</span>
                                     </div>
                                 </div>
                             </div>
@@ -112,7 +114,19 @@
                     </h2>
                     <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo">
                         <div class="accordion-body">
-                            <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                            <h3 class="mt-2 mb-5 display-4 text-center">
+                                Entraîner une intelligence artificielle à reconnaître des photos de personnes
+                            </h3>
+                            <p>
+                                Ici, nous allons apprendre à former une intelligence artificielle pour reconnaître les photos de personnes et catégoriser si elles font quelque chose d'illégal ou non.
+                            </p>
+                            <p>
+                                Rendez vous chez nous comme la dernière fois avec votre ordinateur portable à partir de
+                                9h00 le mercredi 15 février pour continuer le <i><b>process</b></i>
+                            </p>
+                            <p>
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda laborum odit blanditiis voluptatibus fugit. Sit iste, odio tempore reprehenderit facere itaque ullam, recusandae at consequuntur atque molestiae a, vitae esse! Nihil, eveniet. Atque, modi placeat veritatis commodi explicabo ab dolorem nobis dicta omnis fuga iure cum quis consectetur dolores. Labore!
+                            </p>
                         </div>
                     </div>
                 </div>
