Calendrier page done

--- a/public/calendrier.html
+++ b/public/calendrier.html
@@ -141,7 +141,7 @@
                                         <span class="display-5 ps-3">Vendredi 17 mars</span>
                                     </div>
                                     <div class="col-md-8 mt-2 text-center ">
-                                        <span class="fw-light">Attelier Developpement d'une Intelligence Artificielle</span>
+                                        <span class="fw-light">Pique-Nique pour les membres de l'association</span>
                                     </div>
                                 </div>
                             </div>
@@ -149,7 +149,18 @@
                     </h2>
                     <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree">
                         <div class="accordion-body">
-                            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                            <h3 class="mt-2 mb-5 display-4 text-center">
+                                Petit pique-nique des membres de l'association
+                            </h3>
+                            <p>
+                                Pas de programmation ce jour, nous préparons un pique-nique pour les membres de l'association pour se détendre et réfléchir au <i><b>process</b></i> (d'apprentissage)
+                            </p>
+                            <p>
+                                Nous nous réunirons près de l'église abandonnée à côté de l'arbre étrange où les gens ont disparu. Mais on y a pensé, on y va le vendredi 17 mars au matin à 9h00 comme toujours, donc pas de soucis
+                            </p>
+                            <p>
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda laborum odit blanditiis voluptatibus fugit. Sit iste, odio tempore reprehenderit facere itaque ullam, recusandae at consequuntur atque molestiae a, vitae esse! Nihil, eveniet. Atque, modi placeat veritatis commodi explicabo ab dolorem nobis dicta omnis fuga iure cum quis consectetur dolores. Labore!
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -164,7 +175,7 @@
                                         <span class="display-5 ps-3">Lundi 1 mai</span>
                                     </div>
                                     <div class="col-md-8 mt-2 text-center ">
-                                        <span class="fw-light">Attelier Developpement d'une Intelligence Artificielle</span>
+                                        <span class="fw-light">Préparation au cas où pour la prise de pouvoir des machines sur l'humanité</span>
                                     </div>
                                 </div>
                             </div>
@@ -172,10 +183,19 @@
                     </h2>
                     <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour">
                         <div class="accordion-body">
-                            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                            <h3 class="mt-2 mb-5 display-4 text-center">
+                                Préparation à l'apocalypse
+                            </h3>
+                            <p>
+                                Nous avons vu récemment que l'intelligence artificielle que Gilfoyle a développée est capable de déchiffrer chaque norme de codification existante, et nous ne pouvons pas l'empêcher de se répliquer dans d'autres systèmes, nous avons donc découvert qu'il y avait une petite chance que nous puissions ne pas pouvoir l'arrêter.
+                            </p>
+                            <p>
+                                Donc, juste au cas où, avec la possibilité hyper minuscule que cela signifie la fin de l'humanité, nous donnons juste quelques conseils pour se préparer à nos nouveaux suzerains et quelques beaux endroits où se cacher. Mais tout cela n'est que théorique, donc pas de vrais soucis hé
+                            </p>
                         </div>
                     </div>
                 </div>
+                <!-- NO MORE ITEMS -->
             </div>
         </div>
     </section>
