--- a/public/index.html
+++ b/public/index.html
@@ -123,7 +123,9 @@
                 <h2>Prochain rendez-vous</h2>
             </div>
             <div class="row text-center py-4 next-date rounded-4 section-description">
-                <span class="display-5">Mardi 18 - Octobre</span>
+                <span class="display-5">
+                    <a href="calendrier.html">Mercredi 1 - Février</a>
+                </span>
             </div>
         </div>
     </section>
