Started with the contact section

--- a/public/calendrier.html
+++ b/public/calendrier.html
@@ -39,13 +39,13 @@
             <div class="collapse navbar-collapse justify-content-end align-center" id="navbarSupportedContent">
                 <ul class="navbar-nav text-center gap-3 gap-md-0">
                     <li class="nav-item">
-                        <a href="/#top" class="nav-link" >Accueil</a>
+                        <a href="/" class="nav-link" >Accueil</a>
                     </li>
                     <li class="nav-item">
-                        <a href="/#contact" class="nav-link">Contactez-Nous</a>
+                        <a href="contact.html" class="nav-link">Contactez-Nous</a>
                     </li>
                     <li class="nav-item">
-                        <a href="calendrier.html#top" class="nav-link active" aria-current="page">Prochains Événements</a>
+                        <a href="#top" class="nav-link active" aria-current="page">Prochains Événements</a>
                     </li>
                 </ul>
             </div>
