--- a/public/index.html
+++ b/public/index.html
@@ -38,10 +38,10 @@
             <div class="collapse navbar-collapse justify-content-end align-center" id="navbarSupportedContent">
                 <ul class="navbar-nav text-center gap-3 gap-md-0">
                     <li class="nav-item">
-                        <a href="/#top" class="nav-link active" aria-current="page">Accueil</a>
+                        <a href="#top" class="nav-link active" aria-current="page">Accueil</a>
                     </li>
                     <li class="nav-item">
-                        <a href="/#contact" class="nav-link">Contactez-Nous</a>
+                        <a href="contact.html" class="nav-link">Contactez-Nous</a>
                     </li>
                     <li class="nav-item">
                         <a href="calendrier.html" class="nav-link">Prochains Événements</a>
