--- a/public/contact.html
+++ b/public/contact.html
@@ -54,10 +54,31 @@
     
     <!-- CONTACT FORM  -->
     <section id="contact-form" class="section section-contact pt-4 pt-md-5">
-        <div class="container-md py-5 mt-5">
+        <div class="container-fluid py-5 mt-5 px-0 px-md-5">
             <h1 class="display-1 my-md-5 text-uppercase text-center">Contactez-Nous</h1>
-            <div class="justify-content-center">
-                <div class="bg-light">asdf</div>
+            <div class="contact-form justify-content-center">
+                <form class="p-3 p-md-5">
+                    <!-- NAME -->
+                    <div class="mb-4">
+                        <label for="name" class="form-label">Prénom</label>
+                        <input type="text" class="form-control" id="name" aria-describedby="emailHelp">
+                    </div>
+                    <!-- EMAIL -->
+                    <div class="mb-4">
+                        <label for="email" class="form-label">Email</label>
+                        <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
+                        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                    </div>
+                    <!-- TEXTAREA -->
+                    <div class="mb-4">
+                        <label for="message" class="form-label">Message</label>
+                        <textarea class="form-control" id="message" rows="6"></textarea>
+                    </div>
+                    <div class="d-grid">
+                        <button type="submit" class="btn btn-primary me-0">Submit</button>
+                        
+                    </div>
+                  </form>
             </div>
         </div>
     </section>
