--- a/public/calendrier.html
+++ b/public/calendrier.html
@@ -61,9 +61,9 @@
                 <!-- FIRST ITEM -->
                 <div class="accordion-item">
                     <h2 class="accordion-header " id="headingOne">
-                        <button class="accordion-button collapsed align-items-baseline" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                        <button class="accordion-button collapsed align-items-center" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
                             <div class="container-fluid">
-                                <div class="row align-items-baseline">
+                                <div class="row align-items-center">
                                     <div class="col-md-4 text-center">
                                         <span class="display-5 ps-3">Mercredi 1 février</span>
                                     </div>
@@ -89,9 +89,6 @@
                             <p>
                                 Pour plus d'information: Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda laborum odit blanditiis voluptatibus fugit. Sit iste, odio tempore reprehenderit facere itaque ullam, recusandae at consequuntur atque molestiae a, vitae esse! Nihil, eveniet. Atque, modi placeat veritatis commodi explicabo ab dolorem nobis dicta omnis fuga iure cum quis consectetur dolores. Labore!
                             </p>
-                            <p>
-                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam quos sit temporibus modi enim, optio corrupti exercitationem cum architecto consectetur labore iusto. Dicta officia amet officiis obcaecati deleniti et quam magni non odit sed recusandae exercitationem, quasi asperiores beatae nam ipsum. Consequuntur ea error quidem? Quibusdam deserunt omnis id inventore accusantium voluptatum blanditiis, odio voluptas iste consequuntur! Ipsam a iste natus vel, quam non rem aperiam voluptate provident minima dolor voluptates repellendus ex repellat. Non illum assumenda quaerat aperiam unde doloremque molestiae magni porro at sapiente, eaque veniam dolorem enim neque laudantium! Hic veritatis itaque fugiat impedit corrupti dolor! Voluptate!
-                            </p>
                         </div>
                     </div>
                 </div>
@@ -99,9 +96,9 @@
                 <!-- SECOND ITEM -->
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingTwo">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        <button class="accordion-button collapsed align-items-center" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                             <div class="container-fluid">
-                                <div class="row align-items-baseline">
+                                <div class="row align-items-center">
                                     <div class="col-md-4 text-center">
                                         <span class="display-5 ps-3">Mercredi 15 février</span>
                                     </div>
@@ -134,9 +131,9 @@
                 <!-- THIRD ITEM -->
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingThree">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                        <button class="accordion-button collapsed align-items-center" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                             <div class="container-fluid">
-                                <div class="row align-items-baseline">
+                                <div class="row align-items-center">
                                     <div class="col-md-4 text-center">
                                         <span class="display-5 ps-3">Vendredi 17 mars</span>
                                     </div>
@@ -168,9 +165,9 @@
                 <!-- FORTH ITEM -->
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingFour">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                        <button class="accordion-button collapsed align-items-center" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
                             <div class="container-fluid">
-                                <div class="row align-items-baseline">
+                                <div class="row align-items-center">
                                     <div class="col-md-4 text-center">
                                         <span class="display-5 ps-3">Lundi 1 mai</span>
                                     </div>
