--- a/public/index.html
+++ b/public/index.html
@@ -108,7 +108,10 @@
                             </p>
                         </div>
                         <div class="row mt-3">
-                            <button type="button" class="btn btn-primary btn-lg btn-block">Contacter</button>
+                            <a href="contact.html" class="btn btn-primary btn-lg btn-block">
+                                <!-- <button type="button" class="btn btn-primary btn-lg btn-block">Contacter</button> -->
+                                Contacter
+                            </a>
                         </div>
                     </div>
                 </div>
