Better responsive design

--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
     </nav>
     
     <!-- INTRO SECTION  -->  
-    <section id="home" class="section intro-section my-1 my-md-5">
+    <section id="home" class="section intro-section my-1 my-md-3">
         <div class="container-md my-2">
             <!-- FIRST ROW -->
             <div class="row align-items-center text-center">
@@ -67,13 +67,12 @@
             </div>
             <!-- SECOND ROW -->
             <div class="row align-items-center mt-md-5">
-                <div class="col-md-8 px-4 px-md-0">
+                <div class="col-lg-8 px-5 px-md-0">
                     <p class="display-5 section-description">
-                            Ce site est fait par des programmeurs pour tous les programmeurs qui 
-                            ont un peu de mal à s'adapter à la écriture de commentaires en français
+                        Bienvenue sur le site web de l'Association des Développeurs Informatiques Étrangers Unis, une communauté dédiée aux programmeurs étrangers passionnés d'intelligence artificielle qui cherchent à améliorer leurs compétences et à partager leurs connaissances dans un environnement anglophone.
                     </p>
                 </div>
-                <div class="col-md-4 mt-4 mt-md-0 text-end">
+                <div class="col-lg-4 mt-4 mt-lg-0 text-end">
                     <div class="icon-box">
                         <img src="/assets/images/screen.png" alt="Screen image" class="img-fluid image-content">
                         <a href="" class="glightbox position-absolute top-50 start-50 translate-middle">
@@ -84,6 +83,20 @@
                             <span class="wave-animation wave-animation--2"></span>
                         </a>
                     </div>
+                </div>
+            </div>
+            <!-- THIRD ROW -->
+            <div class="row align-items-center mt-5 pt-3">
+                <div class="col px-4 px-md-5">
+                    <p class="display-6 section-description">
+                        Nous croyons que l'écriture de code propre et efficace est essentielle pour construire des modèles d'IA de qualité supérieure.
+                    </p>
+                    <p class="display-6 section-description">
+                        C'est pourquoi nous refusons catégoriquement d'utiliser des commentaires de code en français dans notre communauté.
+                    </p>
+                    <p class="display-6 section-description">
+                        Rejoignez-nous pour des événements, des discussions en ligne et des projets en groupe qui vous aideront à devenir un meilleur développeur d'IA tout en naviguant dans les défis de développer en tant qu'étranger en France.
+                    </p>
                 </div>
             </div>
         </div>
@@ -99,13 +112,13 @@
                     class="img-fluid image-content">
                 </div>
                 <!-- SECOND COLUMN -->
-                <div class="col-md-8 px-4 px-md-0">
+                <div class="col-md-8 px-lg-0">
                     <div class="container-fluid">
                         <div class="row">
                             <h2>
                                 Rejoignez-nous
                             </h2>
-                            <p class="display-6 section-description">
+                            <p class="display-5 section-description">
                                     Dans notre association, nos membres partagent leurs astuces pour mieux coder et avoir un environnement de travail sain. La plupart d'entre eux ont multiplié par 10 leur productivité et cherchent maintenant à aider les autres
                             </p>
                         </div>
