--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     <nav class="navbar navbar-expand-md navbar-dark fixed-top shadow-lg"> 
         <!-- Possible to use sticky-top, but just using this one for compatibility -->
         <div class="container-md">
-            <span class="navbar-brand"><span class="display-3 fw-bold">ADIEU</span></span>
+            <a href="/" class="navbar-brand"><span class="display-3 fw-bold">ADIEU</span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" 
             aria-expanded="false" aria-label="Toggle navigation">
