fix: social media tags not working

--- a/public/calendrier.html
+++ b/public/calendrier.html
@@ -17,13 +17,20 @@
     <link rel="canonical" href="https://adieu.up.railway.app/"/>
     
     <!-- SOCIAL MEDIA META TAGS -->
-    <meta property="og:title" content="ADIEU: Association des Développeurs 
-    Informatiques Étrangers Unis">
-    <meta property="og:type" content="website" />
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://adieu.up.railway.app/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Association des Développeurs Informatiques Étrangers Unis">
     <meta property="og:description" content="Communauté dédiée aux programmeurs étrangers passionnés d'intelligence artificielle qui cherchent à améliorer leurs compétences dans un environnement anglophone">
     <meta property="og:image" content="https://images.pexels.com/photos/792199/pexels-photo-792199.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
-    <meta property="og:url" content="https://adieu.up.railway.app/">
+
+    <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="adieu.up.railway.app">
+    <meta property="twitter:url" content="https://adieu.up.railway.app/">
+    <meta name="twitter:title" content="Association des Développeurs Informatiques Étrangers Unis">
+    <meta name="twitter:description" content="Communauté dédiée aux programmeurs étrangers passionnés d'intelligence artificielle qui cherchent à améliorer leurs compétences dans un environnement anglophone">
+    <meta name="twitter:image" content="https://images.pexels.com/photos/792199/pexels-photo-792199.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
     
     <!-- FONTS -->
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;500;700&display=swap" rel="stylesheet">
