Added footer to all pages

--- a/public/index.html
+++ b/public/index.html
@@ -173,7 +173,7 @@
     <section id="image-carousel" class="section pt-md-5">
         <div class="container-md py-5 text-center mt-2">
             <h2 class="display-4 my-md-5">Photos de notre dernière rencontre</h2>
-            <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel" data-bs-interval="4000" data-bs-wrap="true"
+            <div id="carouselPhotos" class="carousel slide" data-bs-ride="carousel" data-bs-interval="4000" data-bs-wrap="true"
             data-bs-pause="false">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
@@ -191,13 +191,38 @@
     </section>
     
     <!-- FOOTER -->
-    <footer class="bg-dark text-center text-white">
-        <!-- Copyright -->
-        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-          © 2023 Copyright:
-          <a class="text-white" href="mailto:gustavorossich@gmail.com">Gustavo Rossich</a>
+    <footer>
+        <div id="footer-wrapper" class="container-fluid footer-container">
+            <div class="container-lg">
+                <div class="row">
+                    <div class="col-lg-4 ps-0 ps-lg-5">
+                        <span class="display-5 fw-bold text-uppercase">
+                            ADIEU
+                        </span>
+                        <p>
+                            Association des Développeurs 
+                            Informatiques Étrangers Unis
+                        </p>
+                    </div>
+                    <div class="col-lg-8 share">
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https://adieu.up.railway.app/" target="_blank">Share on Facebook</a>
+                        <a href="https://twitter.com/intent/tweet?url=https://adieu.up.railway.app/&text=Check%20out%20this%20website!" target="_blank">Share on Twitter</a>
+                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://adieu.up.railway.app/" target="_blank">Share on LinkedIn</a>
+                    </div>
+                </div>
+                
+                <!-- Copyright -->
+                <div class="row copyright text-center align-items-center">
+                    <div class="col">
+                        © 2023 Copyright:
+                        <a class="text-white" href="mailto:gustavorossich@gmail.com">
+                            Gustavo Rossich
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
-      </footer>
+    </footer>
     <!-- SCRIPTS -->
     <script src="assets/glightbox/js/glightbox.js"></script>
     <script src="assets/js/main.js"></script>
