Styled footer and some general responsive update

--- a/public/calendrier.html
+++ b/public/calendrier.html
@@ -240,16 +240,13 @@
                         <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://adieu.up.railway.app/" target="_blank">Share on LinkedIn</a>
                     </div>
                 </div>
+            </div>
                 
-                <!-- Copyright -->
-                <div class="row copyright text-center align-items-center">
-                    <div class="col">
-                        © 2023 Copyright:
-                        <a class="text-white" href="mailto:gustavorossich@gmail.com">
-                            Gustavo Rossich
-                        </a>
-                    </div>
-                </div>
+            <!-- Copyright -->
+            <div class="copyright">
+                <span>
+                    © 2023 Copyright:<a href="mailto:gustavorossich@gmail.com">Gustavo Rossich</a>
+                </span>    
             </div>
         </div>
     </footer>
