--- a/public/contact.html
+++ b/public/contact.html
@@ -75,10 +75,10 @@
     
     <!-- CONTACT FORM  -->
     <section id="contact-form" class="section section-contact pt-4 pt-md-5">
-        <div class="container-fluid py-5 mt-5 px-0 px-md-5">
+        <div class="container-lg py-5 mt-5">
             <h1 class="display-1 my-md-5 text-uppercase text-center">Contactez-Nous</h1>
             <div class="contact-form justify-content-center">
-                <form class="p-3 p-md-5">
+                <form class="">
                     <!-- NAME -->
                     <div class="mb-4">
                         <label for="name" class="form-label">Prénom</label>
@@ -88,7 +88,7 @@
                     <div class="mb-4">
                         <label for="email" class="form-label">Email</label>
                         <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
-                        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                        <div id="emailHelp" class="form-text">Nous ne partagerons jamais votre email avec quelqu'un d'autre.</div>
                     </div>
                     <!-- TEXTAREA -->
                     <div class="mb-4">
@@ -125,13 +125,13 @@
                         <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://adieu.up.railway.app/" target="_blank">Share on LinkedIn</a>
                     </div>
                 </div>
+            </div>
                 
-                <!-- Copyright -->
-                <div class="row copyright text-center align-items-center">
-                    <div class="col">
-                        © 2023 Copyright:<a class="text-white" href="mailto:gustavorossich@gmail.com">Gustavo Rossich</a>
-                    </div>
-                </div>
+            <!-- Copyright -->
+            <div class="copyright">
+                <span>
+                    © 2023 Copyright:<a href="mailto:gustavorossich@gmail.com">Gustavo Rossich</a>
+                </span>    
             </div>
         </div>
     </footer>
