added real photos to the carousel

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <!-- 
     Évaluation d'entraînement - Créer un site web avec HTML, CSS et le Framework Bootstrap
     Autor: Gustavo Rossich, 2023
+    #TODO add Image by senivpetro on Freepik to credits
 -->
 <html lang="fr">
 <head>
@@ -177,13 +178,13 @@
             data-bs-pause="false">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="https://picsum.photos/800/400?random=1&grayscale" class="d-block w-100" alt="Gilfoyle eating all the chips">
+                    <img src="/assets/images/rencontre_1.jpg" class="d-block w-100" alt="Gilfoyle eating all the chips">
                   </div>
                   <div class="carousel-item">
-                    <img src="https://picsum.photos/800/400?random=2&grayscale" class="d-block w-100" alt="Gilfoyle creating an indestructible AI">
+                    <img src="/assets/images/rencontre_2.jpg" class="d-block w-100" alt="Gilfoyle creating an indestructible AI">
                   </div>
                   <div class="carousel-item">
-                    <img src="https://picsum.photos/800/400?random=3&grayscale" class="d-block w-100" alt="Gilfoyle destroying the world">
+                    <img src="/assets/images/rencontre_3.jpg" class="d-block w-100" alt="Gilfoyle destroying the world">
                   </div>
                 </div>
               </div>
