--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,6 @@
 <!-- 
     Évaluation d'entraînement - Créer un site web avec HTML, CSS et le Framework Bootstrap
     Autor: Gustavo Rossich, 2023
-    #TODO add Image by senivpetro on Freepik to credits
 -->
 <html lang="fr">
 <head>
@@ -187,7 +186,12 @@
                     <img src="/assets/images/rencontre_3.jpg" class="d-block w-100" alt="Gilfoyle destroying the world">
                   </div>
                 </div>
-              </div>
+            </div>
+            <div class="row text-end mt-2">
+                <figcaption>
+                    Images from <a href="https://www.freepik.com/author/senivpetro" target="_blank"> senivpetro on Freepik</a>
+                </figcaption>
+            </div>
         </div>
     </section>
     
