style: changed the credits link to a darker style

--- a/public/index.html
+++ b/public/index.html
@@ -188,8 +188,8 @@
                 </div>
             </div>
             <div class="row text-end mt-2">
-                <figcaption>
-                    Images from <a href="https://www.freepik.com/author/senivpetro" target="_blank"> senivpetro on Freepik</a>
+                <figcaption class="text-muted">
+                    Images from <a href="https://www.freepik.com/author/senivpetro" target="_blank" class="text-muted text-decoration-underline"> senivpetro on Freepik</a>
                 </figcaption>
             </div>
         </div>
