changed js imports

--- a/public/contact.html
+++ b/public/contact.html
@@ -6,7 +6,6 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- STYLESHEETS  -->
@@ -136,8 +135,8 @@
         </div>
     </footer>
     <!-- SCRIPTS -->
-    <script src="assets/glightbox/js/glightbox.js"></script>
     <script src="assets/js/main.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/bootstrap.bundle.min.js.map"></script>
 </body>
 </html>
