--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,6 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- STYLESHEETS  -->
@@ -38,7 +37,7 @@
     <meta name="twitter:image" content="https://images.pexels.com/photos/792199/pexels-photo-792199.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
     
     <!-- PAGE TITLE -->
-    <title>ADIEU: Association des Développeurs 
+    <title>Association des Développeurs 
         Informatiques Étrangers Unis</title>
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
 </head>
@@ -226,8 +225,8 @@
         </div>
     </footer>
     <!-- SCRIPTS -->
-    <script src="assets/glightbox/js/glightbox.js"></script>
     <script src="assets/js/main.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/bootstrap.bundle.min.js.map"></script>
 </body>
 </html>
