--- a/public/index.html
+++ b/public/index.html
@@ -225,7 +225,7 @@
         </div>
     </footer>
     <!-- SCRIPTS -->
-    <script src="assets/js/main.js"></script>
+    <script type="module" src="assets/js/main.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js.map"></script>
 </body>
