--- a/public/calendrier.html
+++ b/public/calendrier.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- STYLESHEETS  -->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link id="stylesheet" rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/glightbox/css/glightbox.min.css">
     
     <link rel="canonical" href="https://adieu.up.railway.app/"/>
