--- a/public/index.html
+++ b/public/index.html
@@ -176,13 +176,13 @@
             data-bs-pause="false">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="/assets/images/rencontre_1.webp" loading="lazy" class="d-block w-100" alt="Gilfoyle eating all the chips">
+                    <img src="/assets/images/rencontre_1.webp" loading="lazy" class="d-block w-100 img-fluid" alt="Gilfoyle eating all the chips" width="640" height="740">
                   </div>
                   <div class="carousel-item">
-                    <img src="/assets/images/rencontre_2.webp" loading="lazy" class="d-block w-100" alt="Gilfoyle creating an indestructible AI">
+                    <img src="/assets/images/rencontre_2.webp" loading="lazy" class="d-block w-100 img-fluid" alt="Gilfoyle creating an indestructible AI" width="640" height="740">
                   </div>
                   <div class="carousel-item">
-                    <img src="/assets/images/rencontre_3.webp" loading="lazy" class="d-block w-100" alt="Gilfoyle destroying the world">
+                    <img src="/assets/images/rencontre_3.webp" loading="lazy" class="d-block w-100 img-fluid" alt="Gilfoyle destroying the world" width="640" height="740">
                   </div>
                 </div>
             </div>
