--- a/public/index.html
+++ b/public/index.html
@@ -176,13 +176,13 @@
             data-bs-pause="false">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="/assets/images/rencontre_1.webp" loading="lazy" class="d-block w-100 img-fluid" alt="Gilfoyle eating all the chips" width="432" height="500">
+                    <img src="/assets/images/rencontre_1.webp" loading="lazy" class="d-block w-100 img-fluid" alt="Gilfoyle eating all the chips" width="1100" height="732">
                   </div>
                   <div class="carousel-item">
-                    <img src="/assets/images/rencontre_2.webp" loading="lazy" class="d-block w-100 img-fluid" alt="Gilfoyle creating an indestructible AI" width="640" height="740">
+                    <img src="/assets/images/rencontre_2.webp" loading="lazy" class="d-block w-100 img-fluid" alt="Gilfoyle creating an indestructible AI" width="1100" height="732">
                   </div>
                   <div class="carousel-item">
-                    <img src="/assets/images/rencontre_3.webp" loading="lazy" class="d-block w-100 img-fluid" alt="Gilfoyle destroying the world" width="640" height="740">
+                    <img src="/assets/images/rencontre_3.webp" loading="lazy" class="d-block w-100 img-fluid" alt="Gilfoyle destroying the world" width="1100" height="710">
                   </div>
                 </div>
             </div>
@@ -196,10 +196,10 @@
     
     <!-- FOOTER -->
     <footer>
-        <div id="footer-wrapper" class="container-fluid footer-container">
+        <div id="footer-wrapper" class="container-fluid footer-container p-0">
             <div class="container-lg">
-                <div class="row">
-                    <div class="col-lg-4 ps-0 ps-lg-5">
+                <div class="row align-items-center">
+                    <div class="col-lg-4 pt-4 px-0 ps-lg-5 ">
                         <span class="display-5 fw-bold text-uppercase">
                             ADIEU
                         </span>
