main.js as a module

--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
     
     <!-- SCRIPTS -->
     <script defer src="assets/glightbox/js/glightbox.js"></script>
-    <script defer src="assets/js/main.js"></script>
+    <script type="module" defer src="assets/js/main.js"></script>
     <script defer src="assets/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
