deleted placeholders in contact

--- a/public/calendrier.html
+++ b/public/calendrier.html
@@ -105,14 +105,14 @@
                                 Developpement d'une Intelligence Artificielle
                             </h3>
                             <p>
-                                Dans cette atelier nous allons apprendre comment developper une intelligence artificielle
+                                Dans cet atelier nous allons apprendre comment developper une intelligence artificielle
                             </p>
                             <p>
                                 Rendez vous chez nous avec votre ordinateur portable à partir de
                                 9h00 le mercredi 1er février pour commencer le <i><b>process</b></i>
                             </p>
                             <p>
-                                Pour plus d'information: Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda laborum odit blanditiis voluptatibus fugit. Sit iste, odio tempore reprehenderit facere itaque ullam, recusandae at consequuntur atque molestiae a, vitae esse! Nihil, eveniet. Atque, modi placeat veritatis commodi explicabo ab dolorem nobis dicta omnis fuga iure cum quis consectetur dolores. Labore!
+                                Pour plus d'information: Lorem ipsum dolor!
                             </p>
                         </div>
                     </div>
@@ -146,9 +146,6 @@
                                 Rendez vous chez nous comme la dernière fois avec votre ordinateur portable à partir de
                                 9h00 le mercredi 15 février pour continuer le <i><b>process</b></i>
                             </p>
-                            <p>
-                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda laborum odit blanditiis voluptatibus fugit. Sit iste, odio tempore reprehenderit facere itaque ullam, recusandae at consequuntur atque molestiae a, vitae esse! Nihil, eveniet. Atque, modi placeat veritatis commodi explicabo ab dolorem nobis dicta omnis fuga iure cum quis consectetur dolores. Labore!
-                            </p>
                         </div>
                     </div>
                 </div>
@@ -180,9 +177,6 @@
                             <p>
                                 Nous nous réunirons près de l'église abandonnée à côté de l'arbre étrange où les gens ont disparu. Mais on y a pensé, on y va le vendredi 17 mars au matin à 9h00 comme toujours, donc pas de soucis
                             </p>
-                            <p>
-                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda laborum odit blanditiis voluptatibus fugit. Sit iste, odio tempore reprehenderit facere itaque ullam, recusandae at consequuntur atque molestiae a, vitae esse! Nihil, eveniet. Atque, modi placeat veritatis commodi explicabo ab dolorem nobis dicta omnis fuga iure cum quis consectetur dolores. Labore!
-                            </p>
                         </div>
                     </div>
                 </div>
@@ -197,7 +191,7 @@
                                         <span class="display-5 ps-3">Lundi 1 mai</span>
                                     </div>
                                     <div class="col-md-8 mt-2 text-center ">
-                                        <span class="fw-light">Préparation au cas où pour la prise de pouvoir des machines sur l'humanité</span>
+                                        <span class="fw-light">Préparation préparation à une potentielle prise de pouvoir des machines sur l'humanité</span>
                                     </div>
                                 </div>
                             </div>
