--- a/public/contact.html
+++ b/public/contact.html
@@ -91,7 +91,7 @@
                     <div class="mb-4">
                         <label for="email" class="form-label">Email</label>
                         <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
-                        <div id="emailHelp" class="form-text">Nous ne partagerons jamais votre email avec quelqu'un d'autre.</div>
+                        <div id="emailHelp" class="form-text">Vos informations personnelles restent confidentielles</div>
                     </div>
                     <!-- TEXTAREA -->
                     <div class="mb-4">
